--- a/templates/main.html
+++ b/templates/main.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <title>Upload new File</title>
 <h1>Upload new File</h1>
-<form method=post enctype=multipart/form-data>
-       <p><input type=file name=file>
-       <label for="options">Choose an option:</label>
-       <select name="options">
+<form method="POST" enctype=multipart/form-data>
+    <p><input type=file name="file">
+    <p><textarea name="text"  rows="4" cols="15"></textarea></p>
+    <label for="options">Choose an option:</label>
+    <select name="options">
          <option value="2d">2d</option>
          <option value="3d">3d</option>
-       </select>
-       <input type=submit value=Submit>
+    </select>
+    <input type=submit value=Submit>
 </form>
